z-index fixes
z-index fixed the arrow overflow bug

--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -106,7 +106,7 @@
     text-align: center;
     padding: 2rem;
     position: fixed;
-    z-index: 1;
+    z-index: 2;
     top: 0;
     right: 0;
     left: 0;
